<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NeverLandsR</string>

    <string name="castle_name_forp">FORP</string>
    <string name="castle_name_octal">OCTAL</string>
    <string name="order_progress">00%</string>
    <string name="main_activity_product_header">Товар:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="fragment_octal_title">OCATAL</string>
    <string name="fragment_forpost_title">FORPOST</string>
    <string name="order_timer">0д 00:00:00</string>
    <string name="product_timer">02:00:00</string>
    <string name="detailed_total">TOTAL:</string>
    <string name="detailed_total_count">00.00</string>

</resources>
