<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_main"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headLayout">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutSwipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/borderBottom"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/firstCastle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/borderBottom">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_fp_item"
                        android:padding="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/castle"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/border_radius_left"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="155dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toStartOf="@+id/layoutProgress"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                style="@style/ForpostHeader"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/castle_name_forp" />

                            <TextView
                                android:id="@+id/time_order_forp"
                                style="@style/ForpostTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-10dp"
                                tools:text="@string/order_timer" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layoutProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ring_blue"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">


                            <TextView
                                android:id="@+id/progress_order_forp"
                                style="@style/ForpostProgress"
                                android:layout_width="85dp"
                                android:layout_height="85dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:paddingTop="5dp"
                                android:text="@string/order_progress" />
                        </LinearLayout>

                    </android.support.constraint.ConstraintLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="@drawable/border_radius_right"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="2dp"
                        android:paddingStart="3dp"
                        android:paddingEnd="6dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/ProductStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_activity_product_header" />

                        <LinearLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/product_item_forp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_cancel" />
                        </LinearLayout>


                        <TextView
                            android:id="@+id/product_time_forp"
                            style="@style/ProductStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/product_timer" />
                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/secondCastle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstCastle">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/constraintLayout4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_oct_item"
                        android:padding="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/castle"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/border_radius_left"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <LinearLayout
                            android:id="@+id/linearLayout5"
                            android:layout_width="155dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toStartOf="@+id/layoutProgressOct"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                style="@style/OctalHeader"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/castle_name_octal" />

                            <TextView
                                android:id="@+id/time_order_octal"
                                style="@style/OctalTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-10dp"
                                tools:text="@string/order_timer" />

                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/layoutProgressOct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ring_orange"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">


                            <TextView

                                android:id="@+id/progress_order_octal"
                                style="@style/OctalProgress"
                                android:layout_width="85dp"
                                android:layout_height="85dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:paddingTop="5dp"
                                android:text="@string/order_progress" />
                        </LinearLayout>


                    </android.support.constraint.ConstraintLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="@drawable/border_radius_right"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="2dp"
                        android:paddingStart="3dp"
                        android:paddingEnd="6dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/ProductStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_activity_product_header" />

                        <LinearLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/product_item_octal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_cancel" />
                        </LinearLayout>


                        <TextView
                            android:id="@+id/product_time_octal"
                            style="@style/ProductStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/product_timer" />
                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>


            <Button
                android:id="@+id/buttonRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.0"
                android:background="@drawable/button_refresh"
                android:drawableStart="@drawable/ic_refresh_wifi"
                android:paddingStart="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondCastle" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.constraint.ConstraintLayout>